  indexing operators, e.g.: e1.![e2; e3; ...], etc.
  (Nicolas Ojeda Bar, review by Gabriel Radanne, Damien Doligez, Gabriel
  Scherer)

### Type system:

- GPR#1370: Fix code duplication in Cmmgen
  (Vincent Laviron, with help from Pierre Chambart,
   reviews by Gabriel Scherer and Luc Maranget)

### Standard library:

### Other libraries:

### Compiler user-interface and warnings:

- GPR#1166: In OCAMLPARAM, an alternative separator can be specified as
  first character (instead of comma) in the set ":|; ,"
  (Fabrice Le Fessant)

- GPR#1428: give a non dummy location for warning 49 (no cmi found)
  (Valentin Gatien-Baron)

- GPR#1472: Improve error reporting for missing 'rec' in let-bindings
  (Arthur Charguéraud and Armaël Guéneau, with help from Gabriel Scherer and
  Frédéric Bour)

### Code generation and optimizations:

### Runtime system:

### Tools:

- MPR#7643, GPR#1377: ocamldep, fix an exponential blowup in presence of nested
  structures and signatures (e.g. "include struct … include(struct … end) … end")
  (Florian Angeletti, review by Gabriel Scherer, report by Christophe Raffalli)

### Manual and documentation:

- PR#7647, GPR#1384: emphasize ocaml.org website and forum in README
  (Yawar Amin, review by Gabriel Scherer)

### Compiler distribution build system

### Internal/compiler-libs changes:

### Bug fixes

- MPR#6394, GPR#1425: fix fatal_error from Parmatch.get_type_path
  (Virgile Prevosto, review by David Allsopp, Thomas Refis and Jacques Garrigue)

* PR#6604, GPR#931: Only allow directives with filename and at the beginning of
  the line
  (Tadeu Zagallo, report by Roberto Di Cosmo,
   review by Hongbo Zhang, David Allsopp, Gabriel Scherer, Xavier Leroy)

- MPR#5250, GPR#1435: on Cygwin, when ocamlrun searches the path
  for a bytecode executable file, skip directories and other
  non-regular files, like other Unix variants do.
  (Xavier Leroy)

- MPR#7668: -principal is broken with polymorphic variants